Fixed horizontal scroll in documentation pages

--- a/sass/imports/_docs.scss
+++ b/sass/imports/_docs.scss
@@ -258,6 +258,7 @@
     -webkit-flex: 1 1 auto;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
+    overflow: hidden;
   }
 
   .docs-nav,  
